--- a/shared/locales/src/jamboree/machine-en.json
+++ b/shared/locales/src/jamboree/machine-en.json
@@ -243,6 +243,10 @@
     "original": "Je moet een hoofdbeheerder zijn om inactieve eenheden te bekijken",
     "translation": "You need to be a lead administrator to view inactive units."
   },
+  "31df7737-2a25-4a6c-9766-39acc3ccdbc8": {
+    "original": "Bevestig dat je eenheidsgegevens correct zijn",
+    "translation": "Confirm that your unit data is correct."
+  },
   "31e91d3b-16e5-4608-9390-75e61d4d090d": {
     "original": "Je kan het huidig scoutsjaar hier wijzigen. Zorg dat je voor dit scoutsjaar alle aansluitingen hebt ingesteld. Ga daarvoor naar 'aansluitingen en verzekeringen' en voeg het scoutsjaar toe en stel de nieuwe prijzen en periodes correct in.",
     "translation": "You can change the current scout year here. Make sure you have set up all affiliations for this scout year. Go to 'affiliations and insurance' and add the scout year and set the new prices and periods correctly."
@@ -451,6 +455,10 @@
     "original": "Oeps, je kan nog geen evenementen met inschrijvingen aanmaken in deze periode. Dit scoutsjaar is nog niet aangemaakt in het systeem.",
     "translation": "Oops, you cannot yet create events with registrations in this period. This scout year has not yet been created in the system."
   },
+  "5a8403bb-90f8-4722-8cad-b275ffa781d9": {
+    "original": "Voeg je ontbrekende eenheidsgegevens toe",
+    "translation": "Add your missing unit data."
+  },
   "5aca8049-d981-4cc5-a86c-0c194047743d": {
     "original": "Natuureenheid",
     "translation": "Nature unit"
@@ -530,6 +538,10 @@
   "62246c37-15c7-4f7d-94e2-7476f971c8da": {
     "original": "Betalen van inschrijvingsgelden of webshops voor een eenheid via Jamboree (partner).",
     "translation": "Paying registration fees or webshops for a unit via Jamboree (partner)."
+  },
+  "6313a021-6795-4b7e-842c-f4574e433324": {
+    "original": "Eenheidsgegevens",
+    "translation": "Unit data"
   },
   "6348587f-8d3e-4a13-8b52-5fa459366fee": {
     "original": "Bij een routinecontrole blijken de DNS-instellingen van de domeinnaam van een eenheid ongeldig te zijn.",
@@ -1394,6 +1406,10 @@
   "f5229cc1-c908-4409-855a-1dba40371815": {
     "original": "Jouw leiding kan in Jamboree jouw beveiligingscode opzoeken en aan jou doorgeven. Ben je zelf leiding, vraag het dan aan jouw medeleiding of GSB.",
     "translation": "Your leader can look up your security code in Jamboree and pass it on to you. If you are a leader yourself, ask your fellow leader or GSB."
+  },
+  "f5404f0c-96f7-4f6a-834d-7616bfbedaf3": {
+    "original": "Ik bevestig dat alle eenheidsgegevens correct zijn",
+    "translation": "I confirm that all unit data is correct."
   },
   "f544b972-416c-471d-8836-d7f3b16f947d": {
     "original": "Dit scoutsjaar is vergrendeld, je kan geen inschrijvingsgroepen meer toevoegen",
