--- a/shared/locales/src/keeo/machine-fr.json
+++ b/shared/locales/src/keeo/machine-fr.json
@@ -247,6 +247,10 @@
     "original": "Je moet een hoofdbeheerder zijn om inactieve eenheden te bekijken",
     "translation": "Tu dois être administrateur principal pour consulter les unités inactives."
   },
+  "31df7737-2a25-4a6c-9766-39acc3ccdbc8": {
+    "original": "Bevestig dat je eenheidsgegevens correct zijn",
+    "translation": "Confirmez que les données de votre unité sont correctes"
+  },
   "31e91d3b-16e5-4608-9390-75e61d4d090d": {
     "original": "Je kan het huidig scoutsjaar hier wijzigen. Zorg dat je voor dit scoutsjaar alle aansluitingen hebt ingesteld. Ga daarvoor naar 'aansluitingen en verzekeringen' en voeg het scoutsjaar toe en stel de nieuwe prijzen en periodes correct in.",
     "translation": "Vous pouvez modifier l'année scoute actuelle ici. Assurez-vous d'avoir défini toutes les affiliations pour cette année scoute. Pour cela, allez à « affiliations et assurances » et ajoutez l'année scoute, puis définissez correctement les nouveaux prix et les nouvelles périodes."
@@ -451,6 +455,10 @@
     "original": "Oeps, je kan nog geen evenementen met inschrijvingen aanmaken in deze periode. Dit scoutsjaar is nog niet aangemaakt in het systeem.",
     "translation": "Oups, vous ne pouvez pas encore créer d'événements avec inscriptions pendant cette période. Cette année scoute n'est pas encore créée dans le système."
   },
+  "5a8403bb-90f8-4722-8cad-b275ffa781d9": {
+    "original": "Voeg je ontbrekende eenheidsgegevens toe",
+    "translation": "Ajoutez les informations manquantes de votre unité"
+  },
   "5aca8049-d981-4cc5-a86c-0c194047743d": {
     "original": "Natuureenheid",
     "translation": "Unité nature"
@@ -530,6 +538,10 @@
   "62246c37-15c7-4f7d-94e2-7476f971c8da": {
     "original": "Betalen van inschrijvingsgelden of webshops voor een eenheid via Keeo (partner).",
     "translation": "Paiement des frais d'inscription ou des boutiques en ligne pour une unité via Keeo (partenaire). "
+  },
+  "6313a021-6795-4b7e-842c-f4574e433324": {
+    "original": "Eenheidsgegevens",
+    "translation": "Données de l'unité"
   },
   "6348587f-8d3e-4a13-8b52-5fa459366fee": {
     "original": "Bij een routinecontrole blijken de DNS-instellingen van de domeinnaam van een eenheid ongeldig te zijn.",
@@ -1406,6 +1418,10 @@
   "f5229cc1-c908-4409-855a-1dba40371815": {
     "original": "Jouw leiding kan in Keeo jouw beveiligingscode opzoeken en aan jou doorgeven. Ben je zelf leiding, vraag het dan aan jouw medeleiding of FOS Open Scouting.",
     "translation": "Votre direction peut rechercher votre code de sécurité dans Keeo et vous le transmettre. Si vous êtes vous-même un responsable, demandez-le à vos collègues responsables ou à FOS Open Scouting."
+  },
+  "f5404f0c-96f7-4f6a-834d-7616bfbedaf3": {
+    "original": "Ik bevestig dat alle eenheidsgegevens correct zijn",
+    "translation": "Je confirme que toutes les informations de l'unité sont correctes"
   },
   "f544b972-416c-471d-8836-d7f3b16f947d": {
     "original": "Dit scoutsjaar is vergrendeld, je kan geen inschrijvingsgroepen meer toevoegen",
