Replaced new translation keys

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5498,5 +5498,35 @@
   "f3a5ff8c-f79e-474e-9e3e-5e85467f5770": "Jouw UiTPAS-integratie heeft onvoldoende toegangsrechten",
   "c2e9194d-82b6-441a-ad47-bbac687667dd": "Jouw UiTPAS-integratie is ingesteld en geldig",
   "bc608e45-810c-4dd3-82f7-3eb2befc4ffc": "Het gekozen tarief is niet toepasbaar voor deze datum.",
-  "621c533c-23fe-43b5-b493-a4352ac479d2": "Kijk dit nog even na"
+  "621c533c-23fe-43b5-b493-a4352ac479d2": "Kijk dit nog even na",
+  "f7b7ac75-f7df-49cc-8961-b2478d9683e3": "Je hebt nog geen toegangsrechten gekregen om berichten te versturen. Vraag aan een hoofdbeheerder om jou toegang te geven via de instellingen van #platform.",
+  "1b509614-30b0-484c-af72-57d4bc9ea788": "Je hebt geen toegangsrechten om emails te versturen naar deze afzender.",
+  "94adb4e0-2ef1-4ee8-9f02-5a76efa51c1d": "De afzender die je hebt gekozen bestaat niet meer. Probeer een andere afzender te kiezen.",
+  "f08cccb3-faf9-473f-b729-16120fadec9c": "De afzender van deze email bestaat niet meer. Probeer een andere afzender te kiezen.",
+  "a6304a41-8c83-419b-8e7e-c26f4a047c19": "Communicatie",
+  "feae4831-c229-4b2a-8dc1-c65184cbdfec": "Hier vind je een historiek van alle communicatie die werd verzonden. Wil je graag een bericht versturen, selecteer dan via het tabblad 'leden' of 'bestellingen' alle leden of bestellingen waar je naar wilt mailen.",
+  "6e1f9492-f036-4b73-8e85-ccbae0d31ad7": "Bericht niet gevonden",
+  "39a982c1-916a-43da-857d-a15f67c96c62": "Verzonden op",
+  "52961dd4-be19-47a1-abe6-1e3c34e8157c": "Aangemaakt op",
+  "a4a8cb20-8351-445a-bb59-91867679eead": "Van",
+  "ddc9d375-901c-4b2d-a257-0449083a9bfd": "Ontvangers",
+  "0f763bbf-f9fd-4213-a675-42396d1065e8": "Bericht zonder onderwerp",
+  "6def054b-5748-43ea-ae84-28c53941b78a": "Concept",
+  "f5eb4dcd-ddc1-4952-a40e-845cda2b88ce": "Bezig met verzenden",
+  "5101ef12-a812-4748-91dd-778c0a3fe482": "Verzonden",
+  "c147043d-f708-4aa8-aad6-0547f4fb425a": "Mislukt",
+  "78db0e8d-3b1f-4982-baf7-dba7c930db48": "Beheer wie berichten mag versturen, vanaf welke afzenders, en wie reeds verzonden berichten kan bekijken.",
+  "893c2f52-23b5-48e7-b1e8-fb3700c5e1e4": "De functie om verzonden berichten te bekijken is nog niet beschikbaar maar komt er binnenkort aan. Je stelt best dus al meteen alle rechten goed in.",
+  "956b7313-91b5-49af-ba77-f2fc25f3a091": "Alle afzenders",
+  "69b8f1cf-5531-4df5-bca1-0026fa2c8edb": "Verstuurd op",
+  "50b99a49-6d0b-47ea-adb0-b2a7a7e9a119": "Berichten versturen",
+  "0d2a7261-a88a-4c60-b1f9-3785d5e22d93": "E-mailsjablonen beheren",
+  "618f51bc-cad2-453f-bece-70ba56b7d1a9": "Versturen",
+  "dc8dddba-1aae-49ad-bdda-68d3e88a1964": "E-mailsjablonen",
+  "848e4722-1eb4-4463-b772-5ceee1881c74": "Inclusief eigen berichten bekijken",
+  "1a6eb95b-4cf7-48e8-80b9-a4eb1b6deda8": "Bij het versturen van berichten kan de gebruiker onderaan bestaande e-mailsjablonen hergebruiken, toevoegen, aanpassen of verwijderen.",
+  "1b2bf97a-f263-40f6-9246-4f0cb326f5ff": "Alle berichten bekijken",
+  "c77d1dfb-a556-4373-9643-5ebe22dc7c21": "Versturen, bewerken en bekijken",
+  "d049c682-f167-4dec-b909-4e1d4c443a94": "afzenders",
+  "1407ad7f-146a-423f-8101-d6d3563e10cc": "afzender"
 }
