Replaced new translation keys part 2

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5528,5 +5528,6 @@
   "1b2bf97a-f263-40f6-9246-4f0cb326f5ff": "Alle berichten bekijken",
   "c77d1dfb-a556-4373-9643-5ebe22dc7c21": "Versturen, bewerken en bekijken",
   "d049c682-f167-4dec-b909-4e1d4c443a94": "afzenders",
-  "1407ad7f-146a-423f-8101-d6d3563e10cc": "afzender"
+  "1407ad7f-146a-423f-8101-d6d3563e10cc": "afzender",
+  "7dfd0425-b8ff-4dec-8c6d-257d94eabbe7": "Communicatie"
 }
