--- a/shared/locales/src/machine-en.json
+++ b/shared/locales/src/machine-en.json
@@ -1131,6 +1131,10 @@
     "original": "Ben je zeker dat je deze instellingen wilt verwijderen?",
     "translation": "Are you sure you want to delete these settings?"
   },
+  "0d2a7261-a88a-4c60-b1f9-3785d5e22d93": {
+    "original": "E-mailsjablonen beheren",
+    "translation": "Manage email templates"
+  },
   "0d2bf5c4-db71-465b-8795-9cf8cac63c75": {
     "original": "E-mailadres (van lid zelf)",
     "translation": "Email address (of member itself)"
@@ -1298,6 +1302,10 @@
   "0f54c3b2-d611-4360-8adc-060867632759": {
     "original": "documenten.zip",
     "translation": "documents.zip"
+  },
+  "0f763bbf-f9fd-4213-a675-42396d1065e8": {
+    "original": "Bericht zonder onderwerp",
+    "translation": "Message without subject"
   },
   "0fa4253f-1cfd-4394-93b4-dfba8da04738": {
     "original": "Beveiligingscode",
@@ -1714,6 +1722,10 @@
   "1403efde-6581-4447-b77d-95bf1307b6e2": {
     "original": "Automatisch rechten toekennen",
     "translation": "Automatically grant rights"
+  },
+  "1407ad7f-146a-423f-8101-d6d3563e10cc": {
+    "original": "afzender",
+    "translation": "sender"
   },
   "140fd2a3-d019-45a9-9d2b-754111da04f6": {
     "original": "Willekeurig aangemaakt.",
@@ -2283,6 +2295,10 @@
     "original": "Wielrennen",
     "translation": "Cycling"
   },
+  "1a6eb95b-4cf7-48e8-80b9-a4eb1b6deda8": {
+    "original": "Bij het versturen van berichten kan de gebruiker onderaan bestaande e-mailsjablonen hergebruiken, toevoegen, aanpassen of verwijderen.",
+    "translation": "When sending messages, users can reuse, add, edit, or delete existing email templates at the bottom."
+  },
   "1a7b41da-9bd3-4019-9ed4-39e742f99f41": {
     "original": "Je kan geen aansluiting verwijderen die al werd gefactureerd",
     "translation": "You cannot delete an affiliation that has already been invoiced"
@@ -2335,6 +2351,10 @@
     "original": "Voorlopig goedgekeurd",
     "translation": "Provisionally approved"
   },
+  "1b2bf97a-f263-40f6-9246-4f0cb326f5ff": {
+    "original": "Alle berichten bekijken",
+    "translation": "View all messages"
+  },
   "1b2d46a6-22a9-485f-bb00-84facfa33d85": {
     "original": "Stel de volgende DNS-instellingen in voor jouw domeinnaam. Dit kan je meestal doen in het klantenpaneel van jouw registrar (bv. Combell, Versio, Transip, One.com, GoDaddy...) waar je je domeinnaam hebt gekocht.",
     "translation": "Set the following DNS settings for your domain name. You can usually do this in the customer panel of your registrar (e.g. Combell, Versio, Transip, One.com, GoDaddy...) where you purchased your domain name."
@@ -2354,6 +2374,10 @@
   "1b4a943c-e44d-4f9f-b5bd-08a485ef05d3": {
     "original": "Bijkomende informatie",
     "translation": "Additional information"
+  },
+  "1b509614-30b0-484c-af72-57d4bc9ea788": {
+    "original": "Je hebt geen toegangsrechten om emails te versturen naar deze afzender.",
+    "translation": "You do not have permission to send emails from this sender."
   },
   "1b51e5e9-5ba2-4924-948e-a431f0fc1a9a": {
     "original": "Geen evenementen gevonden.",
@@ -4851,6 +4875,10 @@
     "original": "Je kan één of meerdere kortingen verbinden aan een kortingscode.",
     "translation": "You can link one or more discounts to a discount code."
   },
+  "39a982c1-916a-43da-857d-a15f67c96c62": {
+    "original": "Verzonden op",
+    "translation": "Sent on"
+  },
   "39bfbb22-cbab-4d4d-a741-802f01e97cd8": {
     "original": "Je moet zelf communiceren dat de bestelling werd geannuleerd",
     "translation": "You must communicate yourself that the order has been cancelled"
@@ -6723,6 +6751,10 @@
     "original": "gratis",
     "translation": "free"
   },
+  "50b99a49-6d0b-47ea-adb0-b2a7a7e9a119": {
+    "original": "Berichten versturen",
+    "translation": "Send messages"
+  },
   "50c110d0-67dd-4733-9fb1-49a1a541e2bd": {
     "original": "Door Stamhoofd en UiTPAS aan elkaar te koppelen kan je een automatische terugbetaling krijgen voor elke verkoop met UiTPAS-kansentarief. Eerst moet je een officiële UiTPAS-organisator worden, zo weet men aan wie de terugbetaling moet gebeuren. Nadien moet je een integratie aanmaken op de website van <button>Publiq</button>. Geef nadien de gegevens van die integratie hieronder in. Tot slot zal je bij elk artikel uit de webshop een evenement uit de UiTdatabank moeten koppelen.",
     "translation": "By connecting Stamhoofd and UiTPAS, you can receive an automatic refund for each sale with the UiTPAS discounted rate. First, you need to become an official UiTPAS organizer, so they know where to send the refund. Then you'll need to create an integration on the <button>Publiq</button> website. Enter the data of that integration below. Finally, you must link an event from UiTdatabank to each item in the webshop."
@@ -6762,6 +6794,10 @@
   "50fc6c16-b3d2-4015-b04c-7f11c6e4d497": {
     "original": "De subdomeinnaam voor jouw registratiepagina is ongeldig",
     "translation": "The subdomain name for your registration page is invalid"
+  },
+  "5101ef12-a812-4748-91dd-778c0a3fe482": {
+    "original": "Verzonden",
+    "translation": "Sent"
   },
   "510807a1-d4c7-45fa-9e3b-ddc8764d3f6e": {
     "original": "{member} is al gekend in ons systeem, maar jouw e-mailadres niet. Om toegang te krijgen heb je de beveiligingscode nodig.",
@@ -6874,6 +6910,10 @@
   "5287b557-b8ed-4580-af63-8b69f1b8c120": {
     "original": "Tarief dat gekozen werd voor de groep of activiteit",
     "translation": "Rate chosen for the group or activity"
+  },
+  "52961dd4-be19-47a1-abe6-1e3c34e8157c": {
+    "original": "Aangemaakt op",
+    "translation": "Created on"
   },
   "529bf7e5-606a-42ae-aaba-82d74e8c8037": {
     "original": "artikels",
@@ -8135,6 +8175,10 @@
     "original": "Je kan deze inlogmethode niet gebruiken",
     "translation": "You cannot use this login method"
   },
+  "618f51bc-cad2-453f-bece-70ba56b7d1a9": {
+    "original": "Versturen",
+    "translation": "Send"
+  },
   "619645fe-f8a1-41aa-afcd-08612362ed36": {
     "original": "lid op rij {row}",
     "translation": "member on row {row}"
@@ -8755,6 +8799,10 @@
     "original": "Uitschrijven",
     "translation": "Unsubscribe"
   },
+  "69b8f1cf-5531-4df5-bca1-0026fa2c8edb": {
+    "original": "Verstuurd op",
+    "translation": "Sent on"
+  },
   "69bc8583-a0ea-4396-9e65-ce69840e80ea": {
     "original": "Automatisch groep bepalen",
     "translation": "Determine group automatically"
@@ -9107,6 +9155,10 @@
     "original": "{member} voldoet niet aan de voorwaarden om in te schrijven voor deze groep (verplichte inschrijving bij leeftijdsgroep).",
     "translation": "{member} does not meet the conditions to register for this group (mandatory registration with age group)."
   },
+  "6def054b-5748-43ea-ae84-28c53941b78a": {
+    "original": "Concept",
+    "translation": "Draft"
+  },
   "6df4e1c5-81cd-4abb-a0dd-528aee6acaa3": {
     "original": "Door",
     "translation": "By"
@@ -9118,6 +9170,10 @@
   "6e1522d7-e084-4ec1-a4dc-47b93a88f4c8": {
     "original": "Nieuw document",
     "translation": "New document"
+  },
+  "6e1f9492-f036-4b73-8e85-ccbae0d31ad7": {
+    "original": "Bericht niet gevonden",
+    "translation": "Message not found"
   },
   "6e39ca2a-d279-41d3-b68d-eb17dd4f4331": {
     "original": "E-mailadres valideren...",
@@ -10079,6 +10135,10 @@
     "original": "Dit kan nare gevolgen hebben als er al lokalen van dit type zijn",
     "translation": "This may have negative consequences if there are already premises of this type"
   },
+  "78db0e8d-3b1f-4982-baf7-dba7c930db48": {
+    "original": "Beheer wie berichten mag versturen, vanaf welke afzenders, en wie reeds verzonden berichten kan bekijken.",
+    "translation": "Manage who is allowed to send messages, from which senders, and who can view already sent messages."
+  },
   "78dedb37-a33d-4907-8034-43345eea18a0": {
     "original": "Laatst nagekeken op",
     "translation": "Last checked on"
@@ -10418,6 +10478,10 @@
   "7dfb11a0-0064-4d9e-af68-b759d5a52746": {
     "original": "Betaalprovider",
     "translation": "Payment provider"
+  },
+  "7dfd0425-b8ff-4dec-8c6d-257d94eabbe7": {
+    "original": "Communicatie",
+    "translation": "Communication"
   },
   "7e08e7df-a19c-486d-9ab4-e892762c0913": {
     "original": "Je moet niet noodzakelijk overschrijven via een app of één van deze apps. Dit is puur voor het gemak, het gaat hier om een gewone overschrijving.",
@@ -10907,6 +10971,10 @@
     "original": "Lees",
     "translation": "Read"
   },
+  "848e4722-1eb4-4463-b772-5ceee1881c74": {
+    "original": "Inclusief eigen berichten bekijken",
+    "translation": "Include viewing your own messages"
+  },
   "8499aa55-27b9-430a-b10e-c356a685d499": {
     "original": "Verplicht aankruisen",
     "translation": "Required check box"
@@ -11330,6 +11398,10 @@
   "89360094-8856-4b28-8921-e3d561ef824c": {
     "original": "De wijzigingen zijn opgeslagen",
     "translation": "The changes have been saved"
+  },
+  "893c2f52-23b5-48e7-b1e8-fb3700c5e1e4": {
+    "original": "De functie om verzonden berichten te bekijken is nog niet beschikbaar maar komt er binnenkort aan. Je stelt best dus al meteen alle rechten goed in.",
+    "translation": "The feature to view sent messages is not yet available but will be added soon. It's best to already set all the permissions correctly."
   },
   "895b521c-da10-4fb6-9417-c8058a3cd858": {
     "original": "Klaar",
@@ -12303,6 +12375,10 @@
     "original": "Transactiekosten",
     "translation": "Transaction costs"
   },
+  "94adb4e0-2ef1-4ee8-9f02-5a76efa51c1d": {
+    "original": "De afzender die je hebt gekozen bestaat niet meer. Probeer een andere afzender te kiezen.",
+    "translation": "The sender you selected no longer exists. Please choose another sender."
+  },
   "94bdc2a4-9ebb-42d2-a4e9-d674eb9aafef": {
     "original": "Geen of slechte internetverbinding",
     "translation": "No or poor internet connection"
@@ -12346,6 +12422,10 @@
   "9562217e-b18e-480e-ad7f-7fd6596dddd6": {
     "original": "Deze keuze wordt onzichtbaar in het ledenportaal en is enkel manueel toe te voegen door een beheerder.",
     "translation": "This choice will be invisible in the member portal and can only be added manually by an administrator."
+  },
+  "956b7313-91b5-49af-ba77-f2fc25f3a091": {
+    "original": "Alle afzenders",
+    "translation": "All senders"
   },
   "95854f9f-45df-4775-9d37-524efbbbc57f": {
     "original": "Op deze rekening schrijft men over",
@@ -13499,6 +13579,10 @@
     "original": "Transactiekost",
     "translation": "Transaction cost"
   },
+  "a4a8cb20-8351-445a-bb59-91867679eead": {
+    "original": "Van",
+    "translation": "From"
+  },
   "a4ace71b-cafd-414d-8bce-e2f56cb8ebe9": {
     "original": "categorieën",
     "translation": "categories"
@@ -13634,6 +13718,10 @@
   "a62f0a8f-384b-403a-9bc3-c719ca3839cf": {
     "original": "Betaalcontext",
     "translation": "Payment context"
+  },
+  "a6304a41-8c83-419b-8e7e-c26f4a047c19": {
+    "original": "Communicatie",
+    "translation": "Communication"
   },
   "a6306aac-e1a5-41aa-9933-d740084a4d54": {
     "original": "Stel eerst een startdatum in voor de inschrijvingen om deze optie te kunnen gebruiken.",
@@ -15923,6 +16011,10 @@
     "original": "Bevestig dat de e-mailadressen juist zijn",
     "translation": "Confirm that the email addresses are correct"
   },
+  "c147043d-f708-4aa8-aad6-0547f4fb425a": {
+    "original": "Mislukt",
+    "translation": "Failed"
+  },
   "c14b0320-cb84-4386-a39a-aa9ffb5eb886": {
     "original": "Groepsnaam",
     "translation": "Group name"
@@ -16402,6 +16494,10 @@
   "c75d45e6-b741-462b-899e-56a41e10918a": {
     "original": "Niet voltooid",
     "translation": "Not completed"
+  },
+  "c77d1dfb-a556-4373-9643-5ebe22dc7c21": {
+    "original": "Versturen, bewerken en bekijken",
+    "translation": "Send, edit, and view"
   },
   "c78ae112-296b-4b37-899b-8e3f56729079": {
     "original": "Vul het bij minstens één ouder in, deze ouder zal vermeld worden op de attesten.",
@@ -17170,6 +17266,10 @@
   "d03225ed-db4a-4cd2-8df4-8932b6820b17": {
     "original": "Momenteel is er niets beschikbaar.",
     "translation": "Currently nothing is available."
+  },
+  "d049c682-f167-4dec-b909-4e1d4c443a94": {
+    "original": "afzenders",
+    "translation": "senders"
   },
   "d05b1cb9-e9cf-46e4-8b27-620b5562d30d": {
     "original": "Rijksregisternummer schuldenaar ontbreekt. Je vult dit best aan bij één van de ouders van dit lid.",
@@ -18239,6 +18339,10 @@
     "original": "Dit kan nare gevolgen hebben als er al activiteiten van dit type zijn",
     "translation": "This may have negative consequences if there are already activities of this type"
   },
+  "dc8dddba-1aae-49ad-bdda-68d3e88a1964": {
+    "original": "E-mailsjablonen",
+    "translation": "Email templates"
+  },
   "dc9f65e0-19ce-4908-8830-da48235faa70": {
     "original": "Betaald bedrag",
     "translation": "Amount paid"
@@ -18394,6 +18498,10 @@
   "ddb1b9de-cc00-4960-ba36-fa70429cbac1": {
     "original": "Oeps! Om spam te voorkomen limiteren we het aantal beveiligingscodes die je kan proberen. Probeer morgen opnieuw.",
     "translation": "Oops! To prevent spam, we limit the number of security codes you can try. Please try again tomorrow."
+  },
+  "ddc9d375-901c-4b2d-a257-0449083a9bfd": {
+    "original": "Ontvangers",
+    "translation": "Recipients"
   },
   "ddf3558e-ed2e-4217-9155-495c3984d769": {
     "original": "Ben je zeker dat je wilt sluiten zonder een bedrag aan te rekenen?",
@@ -19951,6 +20059,10 @@
     "original": "Aantal",
     "translation": "Amount"
   },
+  "f08cccb3-faf9-473f-b729-16120fadec9c": {
+    "original": "De afzender van deze email bestaat niet meer. Probeer een andere afzender te kiezen.",
+    "translation": "The sender for this email no longer exists. Please select a different sender."
+  },
   "f0a3b61f-a736-47f7-b893-1c8c61555b50": {
     "original": "Er zijn meerdere TXT-records ingesteld voor",
     "translation": "Multiple TXT records have been set for"
@@ -20431,6 +20543,10 @@
     "original": "Er is een fout opgetreden bij het registreren van de UiTPAS-ticketverkoop.",
     "translation": "An error occurred while registering the UiTPAS ticket sale."
   },
+  "f5eb4dcd-ddc1-4952-a40e-845cda2b88ce": {
+    "original": "Bezig met verzenden",
+    "translation": "Sending in progress"
+  },
   "f5f56168-1922-4a23-b376-20a7738bfa66": {
     "original": "Onbeperkt",
     "translation": "Unlimited"
@@ -20590,6 +20706,10 @@
   "f7b1a08a-1431-45e3-83c3-8aa8bb1b18e6": {
     "original": "{member} kan pas inschrijven met een geldige aansluiting (en dus verzekering) bij de koepel",
     "translation": "{member} can only register with a valid affiliation (and therefore insurance) with the federation"
+  },
+  "f7b7ac75-f7df-49cc-8961-b2478d9683e3": {
+    "original": "Je hebt nog geen toegangsrechten gekregen om berichten te versturen. Vraag aan een hoofdbeheerder om jou toegang te geven via de instellingen van Stamhoofd.",
+    "translation": "You do not have access rights to send messages yet. Please ask a main administrator to grant you access through the Stamhoofd settings."
   },
   "f7cb59de-5024-4a84-bb81-c10961911e35": {
     "original": "Je ontvangt vanaf nu terug e-mails.",
@@ -21198,6 +21318,10 @@
   "fe9c9ec1-dd24-4fc6-9622-7b5aef4e9208": {
     "original": "Afkeuren",
     "translation": "Reject"
+  },
+  "feae4831-c229-4b2a-8dc1-c65184cbdfec": {
+    "original": "Hier vind je een historiek van alle communicatie die werd verzonden. Wil je graag een bericht versturen, selecteer dan via het tabblad 'leden' of 'bestellingen' alle leden of bestellingen waar je naar wilt mailen.",
+    "translation": "Here you will find a history of all sent communication. To send a message, go to the 'members' or 'orders' tab and select all the members or orders you want to email."
   },
   "feaf0054-1b99-4526-821e-3c63e64574a0": {
     "original": "Tot en met",
