--- a/shared/locales/src/digit/machine-fr.json
+++ b/shared/locales/src/digit/machine-fr.json
@@ -1379,6 +1379,10 @@
     "original": "telefoonnummer van je groep",
     "translation": "numéro de téléphone de votre groupe"
   },
+  "f7b7ac75-f7df-49cc-8961-b2478d9683e3": {
+    "original": "Je hebt nog geen toegangsrechten gekregen om berichten te versturen. Vraag aan een hoofdbeheerder om jou toegang te geven via de instellingen van Ravot.",
+    "translation": "Tu n’as pas encore obtenu les droits d’accès pour envoyer des messages. Demande à un administrateur principal de t’accorder cet accès via les paramètres de Ravot."
+  },
   "f7cb59de-5024-4a84-bb81-c10961911e35": {
     "original": "Je ontvangt vanaf nu terug e-mails.",
     "translation": "Vous recevrez à nouveau des e-mails à partir de maintenant."
